# health-tracking

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  auth_webserver.py  fitbit_utils.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  setup.sh  sheet_util.py
deploy/: Dockerfile  README.aws.md  TODO.md  deploy.sh  ecr-stack.yaml  import-secret.sh  lambda-stack.yaml  lambda_handler.py  secret-import-template.yaml
src/health_tracking/: __init__.py  auth.py  auth_webserver.py  fitbit.py  sheets.py
