[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-tracking"
version = "0.1.0"
description = "Health data tracking tools"
requires-python = ">=3.12"
dependencies = [
    "fitbit",
    "pandas",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "colorlog",
]

[project.scripts]
fitbit-data = "bin.fitbit-data:main"
sheets-upload = "bin.sheets-upload:main"
fitbit-sheets-sync = "bin.fitbit-sheets-sync:main"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnusedImport = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.2.240807",
    "pre-commit",
    "pyright>=1.1.400",
    "ruff",
]
